--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,60 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  min-width: 500px;
+  margin: 0;
+  padding: 0;
   text-align: center;
+  width: 100vw;
+  height: 100vh;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+.container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  flex-direction: row;
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+  .left-zone{
+    width: 300px;
+    height: 100%;
+    background: #bcbcbc;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    flex-direction: column;
+
+    .button-group{
+      display: flex;
+      align-content: center;
+      align-items: center;
+      justify-content: center;
+      justify-items: center;
+      flex-direction: row;
+
+      .button{
+        width: 200px;
+      }
+    }
+
+
   }
-  to {
-    transform: rotate(360deg);
+
+  .edit-zone{
+    height: 100%;
+    background: #bbbbbb;
+    color: #000000;
+    font-size: 14px;
   }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  .canvas{
+    width: 100%;
+    height: 100vh;
   }
+
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
