--- a/src/component/editZone/index.css
+++ b/src/component/editZone/index.css
@@ -1,5 +1,5 @@
 .left-zone {
-    width: 300px;
+    width: auto;
     height: 100%;
     background: #bcbcbc;
     display: flex;
@@ -8,6 +8,7 @@
     justify-content: center;
     justify-items: center;
     flex-direction: column;
+    padding-bottom: 10px;
 
     .button-group {
         display: flex;
@@ -16,13 +17,35 @@
         justify-content: center;
         justify-items: center;
         flex-direction: row;
+        padding: 10px;
 
         .button {
-            width: 200px;
+            width: auto;
+            height: auto;
+            font-size: 10px;
+            font-weight: bold;
+            margin-left: 5px;
+            margin-right: 5px;
+
+            &:hover{
+                background-color: #d7e1ec;
+            }
+            &:active{
+                background-color: #63a5ef;
+            }
+            &:focus{
+                outline: none;
+            }
+
         }
     }
     .edit-zone{
+        max-width: 700px;
+        min-width: 300px;
         height: 100%;
+        margin-right: 10px;
+        margin-left: 10px;
+        resize: horizontal;
         background: #bbbbbb;
         color: #000000;
         font-size: 14px;
