--- a/src/component/editZone/index.css
+++ b/src/component/editZone/index.css
@@ -2,43 +2,14 @@
     width: auto;
     height: 100%;
     background: #bcbcbc;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    justify-items: center;
-    flex-direction: column;
+    /*display: flex;*/
+    /*align-content: center;*/
+    /*align-items: center;*/
+    /*justify-content: center;*/
+    /*justify-items: center;*/
+    /*flex-direction: column;*/
     padding-bottom: 10px;
 
-    .button-group {
-        display: flex;
-        align-content: center;
-        align-items: center;
-        justify-content: center;
-        justify-items: center;
-        flex-direction: row;
-        padding: 10px;
-
-        .button {
-            width: auto;
-            height: auto;
-            font-size: 10px;
-            font-weight: bold;
-            margin-left: 5px;
-            margin-right: 5px;
-
-            &:hover{
-                background-color: #d7e1ec;
-            }
-            &:active{
-                background-color: #63a5ef;
-            }
-            &:focus{
-                outline: none;
-            }
-
-        }
-    }
     .edit-zone{
         max-width: 700px;
         min-width: 300px;
